--- a/.config/yazi/theme.toml
+++ b/.config/yazi/theme.toml
@@ -1,9 +1,6 @@
 [mgr]
 cwd = { fg = "#94e2d5" }
 
-hovered = { fg = "#1e1e2e", bg = "#f9e2af" }
-preview_hovered = { fg = "#1e1e2e", bg = "#cdd6f4" }
-
 find_keyword = { fg = "#f9e2af", italic = true }
 find_position = { fg = "#f5c2e7", bg = "reset", italic = true }
 
@@ -20,6 +17,10 @@ border_symbol = "│"
 border_style = { fg = "#7f849c" }
 
 syntect_theme = "~/.config/yazi/Catppuccin-mocha.tmTheme"
+
+[indicator]
+current = { fg = "#1e1e2e", bg = "#f9e2af" }
+preview = { fg = "#1e1e2e", bg = "#cdd6f4" }
 
 [tabs]
 active = { fg = "#1e1e2e", bg = "#cdd6f4", bold = true }
