feat: fix dir icons style

--- a/.config/yazi/theme.toml
+++ b/.config/yazi/theme.toml
@@ -16,8 +16,6 @@ count_selected = { fg = "#1e1e2e", bg = "#f9e2af" }
 border_symbol = "│"
 border_style = { fg = "#7f849c" }
 
-syntect_theme = "~/.config/yazi/Catppuccin-mocha.tmTheme"
-
 [indicator]
 current = { fg = "#1e1e2e", bg = "#f9e2af" }
 preview = { fg = "#1e1e2e", bg = "#cdd6f4" }
@@ -109,10 +107,6 @@ rules = [
 
   # Documents
   { mime = "application/{pdf,doc,rtf}", fg = "#a6e3a1" },
-
-  # Fallback
-  { name = "*", fg = "#cdd6f4" },
-  { name = "*/", fg = "#f9e2af" },
 ]
 
 [spot]
@@ -122,6 +116,38 @@ tbl_cell = { fg = "#f9e2af", reversed = true }
 tbl_col = { bold = true }
 
 [icon]
+dirs = [
+  { name = ".config", text = "", fg = "#f4b8e4" },
+  { name = ".git", text = "", fg = "#81c8be" },
+  { name = ".github", text = "", fg = "#8caaee" },
+  { name = ".npm", text = "", fg = "#8caaee" },
+  { name = "Desktop", text = "", fg = "#81c8be" },
+  { name = "Development", text = "", fg = "#81c8be" },
+  { name = "Documents", text = "", fg = "#81c8be" },
+  { name = "Downloads", text = "", fg = "#81c8be" },
+  { name = "Library", text = "", fg = "#81c8be" },
+  { name = "Movies", text = "", fg = "#81c8be" },
+  { name = "Music", text = "", fg = "#81c8be" },
+  { name = "Pictures", text = "", fg = "#81c8be" },
+  { name = "Public", text = "", fg = "#81c8be" },
+  { name = "Videos", text = "", fg = "#81c8be" },
+]
+conds = [
+  # Special files
+  { if = "orphan", text = "", fg = "#c6d0f5" },
+  { if = "link", text = "", fg = "#838ba7" },
+  { if = "block", text = "", fg = "#eebebe" },
+  { if = "char", text = "", fg = "#eebebe" },
+  { if = "fifo", text = "", fg = "#eebebe" },
+  { if = "sock", text = "", fg = "#eebebe" },
+  { if = "sticky", text = "", fg = "#eebebe" },
+  { if = "dummy", text = "", fg = "#e78284" },
+
+  # Fallback
+  { if = "dir", text = "", fg = "#8caaee" },
+  { if = "exec", text = "", fg = "#a6d189" },
+  { if = "!dir", text = "", fg = "#c6d0f5" },
+]
 files = [
   { name = "kritadisplayrc", text = "", fg = "#cba6f7" },
   { name = ".gtkrc-2.0", text = "", fg = "#f5e0dc" },
